--- a/src/app/coins/coins.component.html
+++ b/src/app/coins/coins.component.html
@@ -1,15 +1,15 @@
 <div>
-  <div [formGroup]="form" (ngSubmit)="insertCoin()">
+  <form [formGroup]="form" (ngSubmit)="insertCoin()">
     <h2>Select Coin:</h2>
-    <select [formControl]="selectedCoin" (change)="selectCoin($event)">
-      <option value='{"FIVE_PENCE"}'>5p</option>
-      <option value='{"TEN_PENCE"}'>10p</option>
-      <option value='{"TWENTY_PENCE"}'>20p</option>
-      <option value='{"FIFTY_PENCE"}'>50p</option>
-      <option value='{"ONE_POUND"}'>£1</option>
+    <select [formControl]="selectedCoinControl" (change)="selectCoin($event)" [value]='{"name":"FIVE_PENCE"}'>
+      <option value='{"name":"FIVE_PENCE"}'>5p</option>
+      <option value='{"name":"TEN_PENCE"}'>10p</option>
+      <option value='{"name":"TWENTY_PENCE"}'>20p</option>
+      <option value='{"name":"FIFTY_PENCE"}'>50p</option>
+      <option value='{"name":"ONE_POUND"}'>£1</option>
     </select>
-    <button (click)="insertCoin()">Insert Coin</button>
-  </div>
+    <button>Insert Coin</button>
+  </form>
 
   <div>Balance: {{balance}}</div>
 
