adds to coins component, starts vending service

--- a/src/app/coins/coins.component.html
+++ b/src/app/coins/coins.component.html
@@ -11,6 +11,8 @@
     <button>Insert Coin</button>
   </form>
 
+  <button (click)="refundCoins()">Refund Coins</button>
+
   <div>Balance: {{balance}}</div>
 
 </div>
