Adds bootstrap styling, layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="content" role="main">
+  <h1>Drinks Vending Machine</h1>
+  <div class="container>">
+    <div class="row">
+      <app-coins></app-coins>
 
-  <app-coins></app-coins>
-
-  <app-drinks></app-drinks>
-
+      <app-drinks></app-drinks>
+    </div>
+    <app-status></app-status>
+  </div>
 </div>
-
-
-
-
