--- a/src/app/drinks/drinks.component.html
+++ b/src/app/drinks/drinks.component.html
@@ -1,10 +1,12 @@
-<div>
+<div class="col-sm jumbotron padme">
   <h2>Drinks</h2>
 
 <div [formGroup]="drinkForm">
-  <h2>Select Drink to purchase:</h2>
+  <label>Select Drink to purchase:</label>
+  <br />
   <select [formControl]="selectDrinkForPurchaseControl"  (change)="selectDrink($event)">
-    <option *ngFor="let drink of availableDrinks" [ngValue]=drink.name>{{drink.name}}</option>
+    <option value="" selected disabled hidden>Choose Drink</option>
+    <option *ngFor="let drink of availableDrinks" [ngValue]=drink.name>{{drink.name}} - {{drink.cost}}p</option>
   </select>
   <button (click)="purchaseDrink()">Purchase Selected Drink</button>
 </div>
